0.19.14	UNRELEASED

 * Strip superfluous <> around email. (monnerat)

 * Stop checking for ref validity client-side. Users can
   still call check_wants manually. (Jelmer Vernooĳ)

 * Switch over to Google-style docstrings.
   (Jelmer Vernooĳ)

 * Add a ``dulwich.porcelain.active_branch`` function.
   (Jelmer Vernooĳ)

0.19.13	2019-08-19

 BUG FIXES

 * Avoid ``PermissionError``, since it is Python3-specific.
  (Jelmer Vernooĳ)

 * Fix regression that added a dependency on C git for the
   test suite. (Jelmer Vernooĳ, #720)

 * Fix compatibility with Python 3.8 - mostly deprecation warnings.
   (Jelmer Vernooĳ)

0.19.12	2019-08-13

 BUG FIXES

 * Update directory detection for `get_unstaged_changes` for Python 3.
   (Boris Feld, #684)

 * Add a basic ``porcelain.clean``. (Lane Barlow, #398)

 * Fix output format of ``porcelain.diff`` to match that of
   C Git. (Boris Feld)

 * Return a 404 not found error when repository is not found.

 * Mark ``.git`` directories as hidden on Windows.
   (Martin Packman, #585)

 * Implement ``RefsContainer.__iter__``
   (Jelmer Vernooĳ, #717)

 * Don't trust modes if they can't be modified after a file has been created.
   (Jelmer Vernooĳ, #719)

0.19.11	2019-02-07

 IMPROVEMENTS

 * Use fullname from gecos field, if available.
   (Jelmer Vernooĳ)

 * Support ``GIT_AUTHOR_NAME`` / ``GIT_AUTHOR_EMAIL``.
   (Jelmer Vernooĳ)

 * Add support for short ids in parse_commit. (Jelmer Vernooĳ)

 * Add support for ``prune`` and ``prune_tags`` arguments
   to ``porcelain.fetch``. (Jelmer Vernooĳ, #681)

 BUG FIXES

  * Fix handling of race conditions when new packs appear.
    (Jelmer Vernooĳ)

0.19.10	2018-01-15

 IMPROVEMENTS

 * Add `dulwich.porcelain.write_tree`.
   (Jelmer Vernooĳ)

 * Support reading ``MERGE_HEADS`` in ``Repo.do_commit``.
   (Jelmer Vernooĳ)

 * Import from ``collections.abc`` rather than ``collections`` where
   applicable. Required for 3.8 compatibility.
   (Jelmer Vernooĳ)
